compiler/testData/diagnostics/tests/qualifiedExpression/nullCalleeExpression.fir.kt
// !WITH_NEW_INFERENCE
// NI_EXPECTED_FILE

val unwrapped = some.<!SYNTAX!><<!><!UNRESOLVED_REFERENCE!>cabc<!><!SYNTAX!>$Wrapper<!><out Any>::unwrap